src/ui/snapshots/state/default/aborting/complete.snap
---
source: src/ui/state/default/aborting.rs
expression: harness.backend()
---
"                                                                                                                        "
" ┌────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐ "
" │✅ Abort Complete                                                                                                   │ " Hidden by multi-width symbols: [(3, " ")]
" └────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘ "
" ┌Abort Progress──────────────────────────────────────────────────────────────────────────────────────────────────────┐ "
" │                                                                                                                    │ "
" │Cleanup Operations                                                                                                  │ "
" │                                                                                                                    │ "
" │✓ Aborted cherry-pick in progress                                                                                   │ "
" │✓ Cleaned up patch branch                                                                                           │ "
" │                                                                                                                    │ "
" │─────────────────────                                                                                               │ "
" │                                                                                                                    │ "
" │Details                                                                                                             │ "
" │                                                                                                                    │ "
" │Repository: /path/to/repo                                                                                           │ "
" │Branch: patch/main-v1.0.0                                                                                           │ "
" │                                                                                                                    │ "
" │                                                                                                                    │ "
" │                                                                                                                    │ "
" │                                                                                                                    │ "
" │                                                                                                                    │ "
" │                                                                                                                    │ "
" │                                                                                                                    │ "
" │                                                                                                                    │ "
" │                                                                                                                    │ "
" │                                                                                                                    │ "
" │                                                                                                                    │ "
" │                                                                                                                    │ "
" │                                                                                                                    │ "
" │                                                                                                                    │ "
" │                                                                                                                    │ "
" │                                                                                                                    │ "
" │                                                                                                                    │ "
" │                                                                                                                    │ "
" │                                                                                                                    │ "
" │                                                                                                                    │ "
" │                                                                                                                    │ "
" │                                                                                                                    │ "
" │                                                                                                                    │ "
" │                                                                                                                    │ "
" │                                                                                                                    │ "
" │                                                                                                                    │ "
" │                                                                                                                    │ "
" │                                                                                                                    │ "
" └────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘ "
" ┌Instructions────────────────────────────────────────────────────────────────────────────────────────────────────────┐ "
" │Press any key to continue to results...                                                                             │ "
" └────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘ "
"                                                                                                                        "
