src/ui/snapshots/state/default/aborting/in_progress.snap
---
source: src/ui/state/default/aborting.rs
expression: harness.backend()
---
"                                                                                "
" ┌────────────────────────────────────────────────────────────────────────────┐ "
" │⏳ Aborting Cherry-pick Process...                                          │ " Hidden by multi-width symbols: [(3, " ")]
" └────────────────────────────────────────────────────────────────────────────┘ "
" ┌Abort Progress──────────────────────────────────────────────────────────────┐ "
" │                                                                            │ "
" │Cleanup Operations                                                          │ "
" │                                                                            │ "
" │⏳ Aborting cherry-pick in progress...                                      │ " Hidden by multi-width symbols: [(3, " ")]
" │⏳ Cleaning up patch branch...                                              │ " Hidden by multi-width symbols: [(3, " ")]
" │                                                                            │ "
" │─────────────────────                                                       │ "
" │                                                                            │ "
" │Details                                                                     │ "
" │                                                                            │ "
" │Repository: /path/to/repo                                                   │ "
" │Branch: patch/main-v1.0.0                                                   │ "
" │                                                                            │ "
" │                                                                            │ "
" │                                                                            │ "
" │                                                                            │ "
" │                                                                            │ "
" │                                                                            │ "
" │                                                                            │ "
" │                                                                            │ "
" └────────────────────────────────────────────────────────────────────────────┘ "
" ┌Instructions────────────────────────────────────────────────────────────────┐ "
" │Please wait while cleanup is in progress...                                 │ "
" └────────────────────────────────────────────────────────────────────────────┘ "
"                                                                                "
